--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
           </script>
         </div>
         <div id="live-tracker"></div>
-        <p>● The links to watch the match turn on 15 minutes before the game starts.</p>
         <p>● If the first link stops working, freezes, or won’t open, try the second or third link to keep watching without trouble.</p>
-        <p>● 📲💻 = For Both Mobile & PC Devices, 💻 = Best For PC Devices !!</p>
+        <p>● 📱💻 = For Both Mobile & PC Devices, 💻 = Best For PC Devices !!</p>
         <div id="live-container"></div>
       </div>
     </section>
