--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
   <link href="https://web.cricfoot.net/favico.png" rel="icon" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <title>YoSinTV - Cricket | Football | Playing XI | Match Preview</title>
+
+<script async='async' nonce='I2YLlWR-W_Sv7mZu3qWPIA' src='https://fundingchoicesmessages.google.com/i/pub-5525538810839147?ers=1'></script>
+<script nonce='I2YLlWR-W_Sv7mZu3qWPIA'>(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) 
+{if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; 
+iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();
+</script>
+
+
 </head>
 <body class="bg-gray-100 font-sans text-gray-900">
   <div id="fb-root"></div>
