--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.ap
   <div class="container mx-auto max-w-4xl px-4 py-4">
     <div class="adspos">
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5525538810839147" data-ad-slot="4345862479" data-ad-format="horizontal" data-full-width-responsive="true"></ins>
-      <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+          <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5525538810839147" data-ad-slot="4345862479" data-ad-format="auto" data-full-width-responsive="true"></ins>
+          <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
     </div>
   </div>
 
