--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.ap
         </div>
         <div id="live-tracker"></div>
         <p>● If the first link stops working, freezes, or won’t open, try the second or third link to keep watching without trouble.</p>
-        <p>● 📱💻 = For Both Mobile & PC Devices, 💻 = Best For PC Devices !!</p>
+        <p>● The match links are available only 15 minutes before starts of match. so visit again. !!</p>
         <div id="live-container"></div>
       </div>
     </section>
