--- a/index.html
+++ b/index.html
@@ -43,15 +43,14 @@
         <h3 class="text-xl sm:text-2xl md:text-3xl font-bold text-gray-900" id="match-name"></h3>
         <p class="text-sm font-bold text-blue-600" id="match-date-time"></p>
         <div id="match-table-container"></div>
-        <p>Watch the live of this match in HD Quality, Scroll down to check out every link for Smooth Live Stream of this match.</p>
-        <p>Predicted lineups are available for the match a few days in advance while the actual lineup will be available about an hour ahead of the match.</p>
+        <p>● Watch the live of this match in HD Quality, Scroll down to check out every link for Smooth Live Stream of this match.</p>
+        <p>● Predicted lineups are available for the match a few days in advance while the actual lineup will be available about an hour ahead of the match.</p>
         <div class="adspos">
           <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5525538810839147" data-ad-slot="4345862479" data-ad-format="auto" data-full-width-responsive="true"></ins>
           <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
         </div>
         <div id="live-tracker"></div>
-        <p>If the first link stops working, freezes, or won’t open, try the second or third link to keep watching without trouble.</p>
-        <p>Phone & PC = For Both Mobile & PC Devices, PC = Best For PC Devices !!</p>
+        <p>● If the first link stops working, freezes, or won’t open, try the second or third link to keep watching without trouble.</p>
         <div id="live-container"></div>
       </div>
     </section>
