--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             const h = Math.floor(diff/3600000);
             const m = String(Math.floor((diff%3600000)/60000)).padStart(2,'0');
             const s = String(Math.floor((diff%60000)/1000)).padStart(2,'0');
-            progText.textContent = `Match Playing Time: ${h}:${m}:${s} / ${duration}:00`;
+            progText.textContent = `Match Playing Time: ${h}:${m}:${s} / ${duration}:00 hours`;
             progBar.className = 'h-6 rounded-full bg-red-600 text-white text-center font-bold';
             progBar.style.width = perc + '%';
           }
